# nodestorm

./: .gitattributes  .gitignore  Cargo.toml  PRIVACY.md  README.md  ROADMAP.md
.agents/plugins/: marketplace.json
.cargo/: config.toml  mutants.toml
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release-build.yml  release-publish.yml
assets/: fonts.css  main.css
assets/ferroterm/: README.md  ferroterm.d.ts  mount.js
assets/ferroterm/pkg/: ferroterm_wasm.js  ferroterm_wasm_bg.wasm
assets/ferroterm/src/: element.js  ferroterm.js  index.js  keycodes.js  links.js  model.js  palette.js  renderer-canvas.js  renderer-webgl.js
docs/: releasing-v0.9.md  releasing-v1.0.md  webview2-occluded-resize.md
docs/decisions/: 2026-07-19-roadmap-post-v0.9.md
docs/demo/: nodestorm-demo.srt
docs/superpowers/plans/: 2026-07-17-demo-video.md  2026-07-17-v0.3-user-editing.md  2026-07-17-v0.4-sessions-scale-timeline.md  2026-07-17-v0.5-v0.6.md  2026-07-17-v0.7-theming.md  2026-07-17-v0.8-storm-ui.md  2026-07-18-app-icon-redesign.md  2026-07-18-app-icon-titlebar.md  2026-07-18-ci-concurrency.md  2026-07-18-long-content-discoverability.md  2026-07-18-queued-changes-manager.md  2026-07-18-session-menu-polish.md  2026-07-18-source-faithful-theme-palettes.md  2026-07-18-titlebar-control-depth.md  2026-07-18-topbar-title-hover-card.md  2026-07-19-agent-session-launcher.md  2026-07-19-claude-connection-delivery.md  2026-07-19-claude-delivery-review-fixes.md  2026-07-19-microsoft-store-logo-assets.md  2026-07-19-swimlane-drag-drop-containment.md  2026-07-19-swimlane-readability.md  2026-07-20-agent-launcher-live-validation.md  2026-07-20-concise-logging.md  2026-07-20-connection-popover-readability.md  2026-07-20-integrated-terminal.md  2026-07-20-parameterized-unit-tests.md
docs/superpowers/specs/: 2026-07-17-demo-video-design.md  2026-07-17-ui-makeover-storm-design.md  2026-07-17-v0.3-user-editing-scale-export-design.md  2026-07-17-v0.4-sessions-scale-timeline-design.md  2026-07-17-v0.5-v0.6-design.md  2026-07-17-v0.7-theming-design.md  2026-07-18-app-icon-titlebar-design.md  2026-07-18-ci-concurrency-design.md  2026-07-18-long-content-discoverability-design.md  (+17 more)
examples/: demo_agent.rs  drive.rs  generate_icons.rs
packaging/macos/: Info.plist
packaging/windows/: AppxManifest.template.xml  build-msix.ps1  generate-manifest.ps1  prepare-layout.ps1  store-identity.example.json  store-identity.json
plugins/nodestorm/: .mcp.json  README.md  opencode.js  package-lock.json  package.json  pi.js
scripts/: configure-store.mjs  record-demo.ps1  uia-lib.ps1  validate-npm-pack.mjs  validate-release.mjs  verify-windows.ps1
skills/nodestorm/: SKILL.md
src/: agent_launcher.rs  cli.rs  demo.rs  diff.rs  export.rs  icon.rs  layout.rs  lib.rs  logging.rs  main.rs  model.rs  persist.rs  prefs.rs  sessions.rs  store.rs  terminal.rs  theme.rs
src/server/: mod.rs  terminal_ws.rs  tools.rs
src/ui/: activity.rs  agent_launcher.rs  annotation_layer.rs  app.rs  canvas.rs  choice_panel.rs  cluster_card.rs  context_menu.rs  diff_panel.rs  edge_layer.rs  minimap.rs  mod.rs  more_menu.rs  node_card.rs  questions_panel.rs  queued_changes.rs  terminal_panel.rs  theme_menu.rs  timeline.rs  topbar.rs
tests/: host_adapters.mjs  installers.mjs  mcp_roundtrip.rs  pi_headless_roundtrip.mjs  plugin_contract.mjs  release_gates.mjs  windows_installer.ps1
(+7 files in other folders)
